gitops/environments/dev/apps/dndn-dev-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-dev-api
  labels:
    app.kubernetes.io/part-of: dndn
