gitops/environments/dev/apps/dndn-dev-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dndn-dev-api-ingress
  namespace: dndn-dev-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "REPLACE_ME_DEV_CERT_ARN"
    alb.ingress.kubernetes.io/group.name: dndn-dev-public
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/security-groups: REPLACE_ME_DEV_ALB_SECURITY_GROUP
spec:
  rules:
    - host: www.dev.dndn.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dndn-dev-api
                port:
                  number: 8000
    - host: dev.dndn.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dndn-dev-api
                port:
                  number: 8000
